Quorum3/Library/Tests/TypeCheckerGenerated/Pass/ImpAssignIntObjObject.quorum
class Main
    action Main
        Object v
        Integer t
        t:SetValue(5)
        v = cast(Object, t)
        Test(v)
    end

    action Test(Integer var)
        if var:GetValue() = 5
            output "passed"
        end
    end
end
