Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignTextIntObjField.quorum
class Main
    text v = Test()
    action Main
    end

    action Test() returns text
        Integer var
        var:SetValue(5)
        return var
    end
end